--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    
+
     <header>
         <nav>
             <ul>
@@ -21,7 +23,7 @@
                 <li>
                     <a href="#">Contact</a>
                 </li>
-            </ul>   
+            </ul>
         </nav>
     </header>
     <main>
@@ -32,17 +34,86 @@
                 Creative Technologist
             </h2>
             <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
+                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
             <p>
-            <button>
-                Download Resume
-            </button>
+                <button>
+                    Download Resume
+                </button>
             </p>
+        </section>
+        <section class="posts">
+            <h2>
+                Recent Posts
+            </h2>
+            <ul>
+                <li>
+                    <h3>
+                        Making a desing system from a scratch
+                    </h3>
+                    <p>
+                        12 Feb 2020 | Design, Pattern
+                    </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Creating pixel perfect icons in Figma
+                    </h3>
+                    <p>
+                        12 Feb 2020 | Design, Pattern
+                    </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section class="works">
+            <h2>Featured Works</h2>
+            <ul>
+                <li>
+                    <img src="images/Rectangle 30.png" alt="dashboard">
+                    <h3>
+                        Designing Dashboards
+                    </h3>
+                    <p class="info">
+                    <span>2020</span>  Dashboard
+                    </p>
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+                    
+                </li>
+
+                </li>
+                <img src="images/Rectangle 32.png" alt="">
+                <li>
+                    <h3>
+                        Vibrant Portraits of 2020
+
+                    </h3>
+                    <p class="info">
+                    <span>2018</span> Illustration 
+                    </p>
+
+                    <p>
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                    </p>
+
+            </ul>
+
         </section>
     </main>
 
 
 
 </body>
+
 </html>
