--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <script src="https://kit.fontawesome.com/1c71351c60.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -28,20 +29,25 @@
     </header>
     <main>
         <section class="banner">
-            <img src="images/Ellipse 1.png" alt="FotoJohn">
-            <h2>
-                Hi, I am John,
-                Creative Technologist
-            </h2>
-            <p>
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-            </p>
-            <p>
-                <button>
-                    Download Resume
-                </button>
-            </p>
+            <div>
+                <img src="images/Ellipse 1.png" alt="FotoJohn">
+            </div>
+            <div class="texto">
+                <h2>
+                    Hi, I am John,
+                    Creative Technologist
+                </h2>
+                <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <p>
+                    <button>
+                        Download Resume
+                    </button>
+                </p>
+            </div>
         </section>
         <section class="posts">
             <h2>
@@ -84,12 +90,13 @@
                         Designing Dashboards
                     </h3>
                     <p class="info">
-                    <span>2020</span>  Dashboard
+                        <span>2020</span> Dashboard
                     </p>
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </p>
-                    
+
                 </li>
 
                 </li>
@@ -100,20 +107,29 @@
 
                     </h3>
                     <p class="info">
-                    <span>2018</span> Illustration 
+                        <span>2018</span> Illustration
                     </p>
 
                     <p>
-                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
                     </p>
 
             </ul>
 
         </section>
     </main>
-
-
-
+    <footer>
+        <nav>
+            <p>
+                <a href="#"><span class="fa-brands fa-square-facebook"><span></a>
+                <a href="#"><span class="fa-brands fa-instagram"></span></a>
+                <a href="#"><span class="fa-brands fa-twitter"></span></a>
+                <a href="#"><span class="fa-brands fa-linkedin"></span></a>
+            </p>
+        </nav>
+        <p> Copyright ©2020 All rights reserved </p>
+    </footer>
 </body>
 
 </html>
