--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                 </li>
 
                 </li>
-                <img src="images/Rectangle 32.png" alt="">
-                <li>
+              
+                <li>  <img src="images/Rectangle 32.png" alt="">
                     <h3>
                         Vibrant Portraits of 2020
 
